--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,6 +12,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Install Cosign
+      - id: checkout
+        name: Checkout Code
+        uses: actions/checkout@v3
+      - id: cosign
+        name: Install Cosign
         uses: sigstore/cosign-installer@main
+      - id: buildx
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          context: ./languages/nodejs/latest/
+          file: ./languages/nodejs/latest/Containerfile
+          push: true
+          tags: ghcr.io/metio/dev-containers/nodejs:latest
