change key location

--- a/.github/workflows/nim.yml
+++ b/.github/workflows/nim.yml
@@ -43,8 +43,7 @@ jobs:
       - id: sign
         name: Sign Image
         run: |
-          echo ${COSIGN_KEY} > /tmp/cosign.key && \
-          cosign sign --key /tmp/cosign.key ghcr.io/metio/dev-containers/${{ env.LANGUAGE }}:${{ env.VERSION }}
+          echo ${{ secrets.COSIGN_PRIVATE_KEY }} > cosign.key && \
+          cosign sign --key cosign.key ghcr.io/metio/dev-containers/${{ env.LANGUAGE }}:${{ env.VERSION }}
         env:
-          COSIGN_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
