--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,8 @@ jobs:
       - id: cosign
         name: Install Cosign
         uses: sigstore/cosign-installer@main
+        with:
+          cosign-release: v1.7.1
       - id: buildx
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
