--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -35,6 +35,9 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - id: timestamp
+        name: Create Timestamp
+        run: echo "::set-output name=date::$(date --rfc-3339=seconds)"
       - id: publish
         name: Publish Image
         uses: docker/build-push-action@v2
@@ -44,6 +47,17 @@ jobs:
           file: ./languages/${{ env.LANGUAGE }}/${{ env.VERSION }}/Containerfile
           push: true
           tags: ghcr.io/metio/dev-containers/${{ env.LANGUAGE }}:${{ env.VERSION }}
+          labels: |
+            org.opencontainers.image.title="${{ env.LANGUAGE }}"
+            org.opencontainers.image.description="Image for ${{ env.LANGUAGE }} development"
+            org.opencontainers.image.licenses="CC0-1.0"
+            org.opencontainers.image.vendor="metio.wtf"
+            org.opencontainers.image.url="https://github.com/${{ github.repository }}"
+            org.opencontainers.image.documentation="https://github.com/${{ github.repository }}"
+            org.opencontainers.image.source="https://github.com/${{ github.repository }}/languages/${{ env.LANGUAGE }}/${{ env.VERSION }}"
+            org.opencontainers.image.version="${{ env.VERSION }}"
+            org.opencontainers.image.revision="${{ github.sha }}"
+            org.opencontainers.image.created="${{ steps.timestamp.outputs.date }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - id: sign
