--- a/languages/clojure/latest/Containerfile
+++ b/languages/clojure/latest/Containerfile
@@ -4,9 +4,9 @@
 FROM docker.io/library/clojure:latest
 
 RUN apt-get update && \
-    apt-get install -y curl && \
+    apt-get install --assume-yes curl && \
     rm -rf /var/lib/apt/lists/* && \
     curl -O https://raw.githubusercontent.com/clojure-lsp/clojure-lsp/master/install && \
-    chmod a+x install && \
+    chmod 0755 ./install && \
     ./install && \
-    apt-get purge -y --auto-remove curl
+    apt-get purge --assume-yes --auto-remove curl
