--- a/languages/clojure/latest/Containerfile
+++ b/languages/clojure/latest/Containerfile
@@ -5,8 +5,8 @@ FROM docker.io/library/clojure:latest
 
 RUN apt-get update && \
     apt-get install --assume-yes curl && \
-    rm -rf /var/lib/apt/lists/* && \
-    curl -O https://raw.githubusercontent.com/clojure-lsp/clojure-lsp/master/install && \
-    chmod 0755 ./install && \
-    ./install && \
-    apt-get purge --assume-yes --auto-remove curl
+    rm -rf /var/lib/apt/lists/*
+RUN curl https://raw.githubusercontent.com/clojure-lsp/clojure-lsp/master/install --output install-clojure-lsp.sh && \
+    chmod +x ./install-clojure-lsp.sh && \
+    ./install-clojure-lsp.sh
+RUN apt-get purge --assume-yes --auto-remove curl
