add crystal image

--- a/languages/crystal/latest/Containerfile
+++ b/languages/crystal/latest/Containerfile
@@ -3,4 +3,11 @@
 
 FROM docker.io/crystallang/crystal:latest
 
-# TODO: install https://github.com/elbywan/crystalline
+RUN apt-get update && \
+    apt-get install --assume-yes wget && \
+    rm -rf /var/lib/apt/lists/* && \
+    wget https://github.com/elbywan/crystalline/releases/latest/download/crystalline_x86_64-unknown-linux-gnu.gz -O crystalline.gz && \
+    gzip -d crystalline.gz && \
+    chmod u+x crystalline && \
+    mv crystalline /usr/local/bin/crystalline && \
+    apt-get purge --assume-yes --auto-remove wget
