--- a/languages/java/latest-graalvm/Containerfile
+++ b/languages/java/latest-graalvm/Containerfile
@@ -9,7 +9,7 @@ RUN microdnf install gcc zlib-devel
 ENV JAVA_VERSION=17
 ENV GRAALVM_VERSION=22.1.0
 RUN curl -L https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-${GRAALVM_VERSION}/graalvm-ce-java${JAVA_VERSION}-linux-amd64-${GRAALVM_VERSION}.tar.gz > graalvm.tar.gz && \
-  tar -zxf graalvm.tar.gz -C / && \
+  tar --extract --gzip --file graalvm.tar.gz --directory / && \
   rm graalvm.tar.gz
 
 ENV JAVA_HOME="/graalvm-ce-java${JAVA_VERSION}-${GRAALVM_VERSION}"
@@ -18,4 +18,10 @@ ENV PATH="${JAVA_HOME}/bin:$PATH"
 # Install native-image
 RUN gu install native-image
 
-# TODO: install Java language server
+# Install Java language server
+ENV JDTLS_VERSION=1.10.0
+ENV JDTLS_TIMESTAMP=202204131925
+RUN curl -L https://download.eclipse.org/jdtls/milestones/${JDTLS_VERSION}/jdt-language-server-${JDTLS_VERSION}-${JDTLS_TIMESTAMP}.tar.gz > jdtls.tar.gz && \
+  mkdir /jdtls && \
+  tar --extract --gzip --file jdtls.tar.gz --directory /jdtls --no-same-owner && \
+  rm jdtls.tar.gz
