--- a/.github/workflows/prolog.yml
+++ b/.github/workflows/prolog.yml
@@ -1,16 +1,15 @@
-name: Prolog (latest)
+name: Prolog
 on:
   push:
     branches:
       - main
     paths:
       - .github/workflows/prolog.yml
-      - languages/prolog/latest/**
+      - languages/prolog/**
   schedule:
     - cron:  15 3 * * MON
 env:
   LANGUAGE: prolog
-  VERSION: latest
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -18,6 +17,9 @@ jobs:
       contents: read
       packages: write
       id-token: write
+    strategy:
+      matrix:
+        version: ["stable", "latest"]
     steps:
       - id: checkout
         name: Checkout Code
@@ -43,10 +45,10 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          context: ./languages/${{ env.LANGUAGE }}/${{ env.VERSION }}/
-          file: ./languages/${{ env.LANGUAGE }}/${{ env.VERSION }}/Containerfile
+          context: ./languages/${{ env.LANGUAGE }}/${{ matrix.version }}/
+          file: ./languages/${{ env.LANGUAGE }}/${{ matrix.version }}/Containerfile
           push: true
-          tags: ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ env.VERSION }}
+          tags: ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ matrix.version }}
           labels: |
             org.opencontainers.image.title=${{ env.LANGUAGE }}
             org.opencontainers.image.description=Image for ${{ env.LANGUAGE }} development
@@ -54,14 +56,14 @@ jobs:
             org.opencontainers.image.vendor=metio.wtf
             org.opencontainers.image.url=https://github.com/${{ github.repository }}
             org.opencontainers.image.documentation=https://github.com/${{ github.repository }}
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}/languages/${{ env.LANGUAGE }}/${{ env.VERSION }}
-            org.opencontainers.image.version=${{ env.VERSION }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}/languages/${{ env.LANGUAGE }}/${{ matrix.version }}
+            org.opencontainers.image.version=${{ matrix.version }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ steps.timestamp.outputs.date }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - id: sign
         name: Sign Image
-        run: cosign sign ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ env.VERSION }}
+        run: cosign sign ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ matrix.version }}
         env:
           COSIGN_EXPERIMENTAL: "true"
