--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -17,6 +17,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
+      security-events: write
     strategy:
       matrix:
         version: ["latest"]
