--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         version: ["latest"]
     steps:
-      - uses: ./.github/workflows/publish-image
+      - uses: ./.github/workflows/publish-image.yml
         with:
           language: crystal
           version: ${{ matrix.version }}
